# universa

./: .gitignore  run_api.sh
builder/: EXTENDING.md  FILE_HIERARCHY_FUTURE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  config.py  demo.py  main.py  pyproject.toml
builder/generation/: __init__.py  base_pass.py  pass_01_planetary.py  pass_02_tectonics.py  pass_03_topography.py  pass_04_geology.py  pass_05_atmosphere.py  pass_06_oceans.py  pass_07_climate.py  pass_08_erosion.py  pass_09_groundwater.py  pass_10_rivers.py  pass_11_soil.py  pass_12_biomes.py  pass_12_microclimate.py  pass_13_fauna.py  pass_13_features.py  pass_14_polish.py  pass_14_resources.py  pass_15_magic.py  pass_16_settlements.py  pass_17_roads.py  pass_18_politics.py  pipeline.py
builder/models/: world.py
builder/utils/: layer_visualization.py  noise.py  spatial.py  visualization.py
builder/utils/old_viz_layer/: base_visualizer.py  pass_04_geology_viz.py  pass_07_climate_viz.py  pass_09_groundwater_viz.py  pass_13_fauna_viz.py
builder/utils/visualizers/: __init__.py  base_napari_visualizer.py  base_visualizer.py  pass_01_planetary_viz.py  pass_02_tectonics_viz.py  pass_02_tectonics_viz_napari.py  pass_03_topography_viz.py  pass_03_topography_viz_napari.py  pass_04_geology_viz.py  pass_04_geology_viz_napari.py  pass_05_atmosphere_viz.py  pass_05_atmosphere_viz_napari.py  pass_06_oceans_viz.py  pass_06_oceans_viz_napari.py  pass_07_climate_viz.py  pass_07_climate_viz_napari.py  pass_08_erosion_viz.py  pass_09_groundwater_viz.py  pass_09_groundwater_viz_napari.py  pass_11_soil_viz.py  (+14 more)
(+147 files in other folders)
